added ai 4
